--- a/CircularProgressBarSample/CircularProgressBarSample.csproj
+++ b/CircularProgressBarSample/CircularProgressBarSample.csproj
@@ -37,8 +37,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="WinFormAnimation, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\WinFormAnimation.1.0.0.0\lib\net35\WinFormAnimation.dll</HintPath>
+    <Reference Include="WinFormAnimation, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WinFormAnimation.1.2.0.0\lib\net35-Client\WinFormAnimation.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
