--- a/CircularProgressBar/CircularProgressBar.nuspec
+++ b/CircularProgressBar/CircularProgressBar.nuspec
@@ -7,11 +7,13 @@
         <authors>Soroush Falahati</authors>
         <licenseUrl>https://github.com/falahati/CircularProgress/blob/master/LICENSE</licenseUrl>
         <projectUrl>https://github.com/falahati/CircularProgress</projectUrl>
+		<iconUrl>https://github.com/falahati/CircularProgress/blob/master/CircularProgressBar/Icon.png?raw=true</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Circular ProgressBar is a custom control for WinForm with animation.</description>
         <language>en-US</language>
     </metadata>
     <files>
 		<file src="readme.txt" target="" />
+		<file src="Icon.png" target="" />
     </files>
 </package>
