--- a/CircularProgressBar/CircularProgressBar.csproj
+++ b/CircularProgressBar/CircularProgressBar.csproj
@@ -36,8 +36,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="WinFormAnimation, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\WinFormAnimation.1.3.0.0\lib\net35-Client\WinFormAnimation.dll</HintPath>
+    <Reference Include="WinFormAnimation, Version=1.5.6283.2908, Culture=en, processorArchitecture=MSIL">
+      <HintPath>..\packages\WinFormAnimation.1.5.6283.2908\lib\net35-client\WinFormAnimation.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
