--- a/CircularProgressBar/CircularProgressBar.csproj
+++ b/CircularProgressBar/CircularProgressBar.csproj
@@ -39,8 +39,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="WinFormAnimation, Version=1.5.6284.34583, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\WinFormAnimation.1.5.6284.34583\lib\net35-client\WinFormAnimation.dll</HintPath>
+    <Reference Include="WinFormAnimation, Version=1.5.6298.3372, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WinFormAnimation.1.5.6298.3372\lib\net35-client\WinFormAnimation.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
@@ -57,6 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CircularProgressBar.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="../NuGet.targets" />
